--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Snake Game !</title>
+<!--    Css Link -->
     <link rel="stylesheet" href="style.css">
-
+<!-- Css Link Finish -->
 </head>
 <body>
 <!-- Game Part ( We Can Change Width And Height Of Game Zone Here )-->
 <canvas width="400" height="400" id="game"></canvas>
 <!-- Game Part Finish -->
+
+<!-- Script Link -->
 <script src="script.js"></script>
+<!-- Script Link Finish -->
 </body>
 </html>
+<!--
+https://GitHub.com/YasinDehfuli
+https://CodePen.io/YasinDehfuli
+-->
